crates/observed_macros_impl/src/enrichment/snapshots/observed_macros_impl__enrichment__tests__enrichment_option_field_drop_when_none.snap
---
source: crates/observed_macros_impl/src/enrichment/tests.rs
expression: output
---
const _: () = {
    impl ::observed::enrichment::Enrichment for RequestContext {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(2usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::new("tenant", self.tenant),
                );
            if let ::core::option::Option::Some(__val) = self.user_agent {
                entries
                    .push(
                        ::observed::__private::EnrichmentEntry::new("user_agent", __val),
                    );
            }
            entries
        }
    }
};
