crates/observed_macros_impl/src/enrichment/snapshots/observed_macros_impl__enrichment__tests__enrichment_with_dimension.snap
---
source: crates/observed_macros_impl/src/enrichment/tests.rs
expression: output
---
const _: () = {
    impl ::observed::enrichment::Enrichment for RequestContext {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(5usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                            "region",
                            self.region,
                        )
                        .with_metric_dimension("region"),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                            "shard",
                            self.shard,
                        )
                        .with_metric_dimension("shard"),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::new("method", self.method)
                        .with_metric_dimension("http.method"),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::new("tenant", self.tenant),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                            "http.status",
                            self.status,
                        )
                        .with_metric_dimension("status"),
                );
            entries
        }
    }
};
