crates/observed_macros_impl/src/enrichment/snapshots/observed_macros_impl__enrichment__tests__enrichment_with_lifetime.snap
---
source: crates/observed_macros_impl/src/enrichment/tests.rs
expression: output
---
const _: () = {
    impl<'a> ::observed::enrichment::Enrichment for BorrowedCtx<'a> {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(1usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                        "label",
                        ::observed::Value::from(
                            ::std::sync::Arc::<str>::from(self.label),
                        ),
                    ),
                );
            entries
        }
    }
};
