crates/observed_macros_impl/src/enrichment/snapshots/observed_macros_impl__enrichment__tests__enrichment_with_lifetime_and_type_parameter.snap
---
source: crates/observed_macros_impl/src/enrichment/tests.rs
expression: output
---
const _: () = {
    impl<'a, T> ::observed::enrichment::Enrichment for MixedCtx<'a, T>
    where
        T: ::core::convert::Into<::observed::Value>,
    {
        fn into_entries(
            self,
        ) -> ::std::vec::Vec<::observed::__private::EnrichmentEntry> {
            let mut entries = ::std::vec::Vec::with_capacity(2usize);
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                        "label",
                        ::observed::Value::from(
                            ::std::sync::Arc::<str>::from(self.label),
                        ),
                    ),
                );
            entries
                .push(
                    ::observed::__private::EnrichmentEntry::unclassified(
                        "value",
                        self.value,
                    ),
                );
            entries
        }
    }
};
